--- a/templates/conf.d/nginx.conf.erb
+++ b/templates/conf.d/nginx.conf.erb
@@ -1,5 +1,5 @@
 # File Managed by Puppet
- user <%= @process_user %>;
+# user <%= @process_user %>;
  worker_processes <%= @processorcount %>;
 
  error_log <%= @log_dir %>/error.log;
